# test-collector-python

./: .editorconfig  .gitignore  .tool-versions  AGENTS.md  MIGRATION_UV.md  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.buildkite/: pipeline.release.yml  pipeline.yml
.buildkite/steps/: lint  release-pypi  test
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: python.yaml
src/buildkite_test_collector/: pytest_plugin.py
src/buildkite_test_collector/collector/: api.py  constants.py  instant.py  payload.py  run_env.py
src/buildkite_test_collector/pytest_plugin/: __init__.py  buildkite_plugin.py  failure_reasons.py  logger.py  span_collector.py
tests/buildkite_test_collector/: conftest.py  test_integration.py  test_integration_forked.py  test_integration_import_error.py  test_integration_skip.py  test_integration_subtests.py
tests/buildkite_test_collector/collector/: conftest.py  test_api.py  test_payload.py  test_run_env.py
tests/buildkite_test_collector/data/: test_sample_execution_tag.py  test_sample_execution_tag_filter.py  test_sample_import_error.py  test_sample_skip.py  test_sample_subtests.py
tests/buildkite_test_collector/pytest_plugin/: conftest.py  test_plugin.py  test_plugin_subtests.py  test_span_collector.py
