[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildkite-test-collector"
version = "1.1.0"
description = "Buildkite Test Engine collector"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Buildkite", email = "support@buildkite.com" }]
classifiers = ["License :: OSI Approved :: MIT License", "Framework :: Pytest"]
dependencies = ["requests>=2", "pytest>=7", "filelock>=3"]

[project.optional-dependencies]
dev = ["mock>=4", "check-manifest", "twine", "responses", "pylint"]

[project.urls]
Homepage = "https://github.com/buildkite/test-collector-python"

[project.entry-points.pytest11]
buildkite-test-collector = "buildkite_test_collector.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/buildkite_test_collector"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE.txt"]
